# Autonomous-Firewall-Orchestrator

./: .env.example  .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-core-foundation/: 1-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
afo_mcp/: __init__.py  models.py  server.py
afo_mcp/tools/: __init__.py  conflicts.py  deployer.py  validator.py
tests/: __init__.py  test_mcp_tools.py
